# UMusic

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  auth.cpp  auth.h  main.cpp  ualbum.cpp  ualbum.h  uartist.cpp  uartist.h  umodel.cpp  umodel.h  usong.cpp  usong.h  usubsonic.cpp  usubsonic.h  uview.qml
